# NFS-Rivals-Framerate-Unlocker

./: .clangd  .gitignore  CMakeLists.txt  FramerateUnlocker.vcxproj  FramerateUnlocker.vcxproj.filters  dllmain.cpp  vcpkg.json
Frostbite/: CMakeLists.txt
Frostbite/Engine/Core/: Types.h
Frostbite/Engine/Core/Math/: Quat.h  Vec2.h  Vec3.h  Vec4.h
Frostbite/Engine/Core/Math/SSE/: Vec_SSE.inl
Frostbite/Engine/Core/Memory/: MemoryArena.cpp
Frostbite/Engine/Core/Resource/: BaseTypes.h
Frostbite/Engine/Entity/: Entity.h  MiscEntities.cpp  UpdateManager.h  Updater.h
Frostbite/Engine/Game/Client/Core/Entity/: ClientGameComponentEntity.h
Frostbite/Engine/Game/Common/Gameplay/Camera/: Camera.h
Frostbite/Engine/Physics/Vehicle/EAGR/: WheelNFS.cpp  WheelNFS.h
Frostbite/Extension/Cinebot/: CinebotCamera.cpp  CinebotCamera.h  CinebotCameraShot.h
Frostbite/Extension/Rpc/: RpcDeclaration.h
Frostbite/Race/Client/UI/Entities/Screen/: ClientUIScreenEffectEntity.cpp
Frostbite/Race/Client/Vehicle/Components/: ClientAnimationComponent.cpp  ClientFxComponent.cpp  ClientRaceVehicleComponent.cpp
Frostbite/Race/Client/Weapon/: ClientVehicleWeaponEntity.h
Frostbite/Race/Common/Core/Proxy/: ProxyPropertyWriter.cpp
Frostbite/Race/Common/Vehicle/Components/: AnimationComponentData.h
Frostbite/Race/Common/Weapon/: VehicleWeaponUpgradable.h
cmake/: deps.cmake  mingw.cmake
util/: memoryutils.cpp
